[project]
name = "telegram-agent"
version = "0.1.0"
requires-python = ">3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "python-socks>=2.8.1",
    "smolagents>=1.26.0",
    "telethon>=1.43.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "ruff>=0.15.17",
]

[tool.ruff]
exclude = [".venv"]
line-length = 79 
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version = "0.1.0"
update_changelog_on_bump = true
